<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.youtube.sorcjc.calendarapp.ResultsActivity">

    <TextView
        android:text="@string/identity_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etIdentityCard"
        android:text="@string/hint_identity_card"
        android:inputType="text"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etFullName"
        android:inputType="text"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:id="@+id/activity_results_tablelayout"
        >
        <TableRow>
            <TextView
                android:text="@string/year_text"
                android:padding="3dip"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:id="@+id/uni1"
                android:textColor="@color/colorTextTable"/>
            <TextView
                android:text="@string/owes_text"
                android:gravity="center"
                android:padding="3dip"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorTextTable"/>
            <TextView
                android:text="@string/paid_text"
                android:gravity="center"
                android:padding="3dip"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorTextTable"/>
        </TableRow>


    </TableLayout>

</LinearLayout>
